Console: dark theme responsive fixup for sidebar collapsed icons; midnight tweak

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -2569,6 +2569,8 @@ h3[id*="jobs"]:first-of-type{margin-top:21px}
 #tunnels .tunnel_local + .tunnel_cap{margin-left:2px}
 #view_profile .identicon{top:1px;right:1px}
 #webappconfiguration a{padding-top:9px}
+#sb_peers_condensed,#sb_tunnels_condensed{margin:-7px -1px -9px -3px;width:calc(100% + 8px)}
+#sb_internals .sb_icon[href="/jobs"]{display:none!important}
 }
 
 @media screen and (max-width:1399px){
